ヘタレ絵追加

--- a/picture.html
+++ b/picture.html
@@ -21,6 +21,7 @@
     <caption>らくがき</caption>
     <tbody>
       <tr>
+        <td><a href="picture/fia01.html"><img src="thumbnail/tn_fia01.jpg"></a></td>
         <td><a href="picture/riko16.html"><img src="thumbnail/tn_riko16.jpg"></a></td>
         <td><a href="picture/nozomi19.html"><img src="thumbnail/tn_nozomi19.jpg"></a></td>
         <td><a href="picture/mayura01.html"><img src="thumbnail/tn_mayura01.jpg"></a></td>
@@ -28,9 +29,9 @@
         <td><a href="picture/norika08.html"><img src="thumbnail/tn_norika08.jpg"></a></td>
         <td><a href="picture/nozomi17.html"><img src="thumbnail/tn_nozomi17.jpg"></a></td>
         <td><a href="picture/riko15.html"><img src="thumbnail/tn_riko15.jpg"></a></td>
-        <td><a href="picture/riko14.html"><img src="thumbnail/tn_riko14.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/riko14.html"><img src="thumbnail/tn_riko14.jpg"></a></td>
         <td><a href="picture/nozomi16.html"><img src="thumbnail/tn_nozomi16.jpg"></a></td>
         <td><a href="picture/collabo16.html"><img src="thumbnail/tn_collabo16.jpg"></a></td>
         <td><a href="picture/norika07.html"><img src="thumbnail/tn_norika07.jpg"></a></td>
@@ -38,9 +39,9 @@
         <td><a href="picture/metastable01.html"><img src="thumbnail/tn_metastable01.jpg"></a></td>
         <td><a href="picture/nozomi15.html"><img src="thumbnail/tn_nozomi15.jpg"></a></td>
         <td><a href="picture/norika06.html"><img src="thumbnail/tn_norika06.jpg"></a></td>
-        <td><a href="picture/riko12.html"><img src="thumbnail/tn_riko12.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/riko12.html"><img src="thumbnail/tn_riko12.jpg"></a></td>
         <td><a href="picture/nozomi14.html"><img src="thumbnail/tn_nozomi14.jpg"></a></td>
         <td><a href="picture/riko11.html"><img src="thumbnail/tn_riko11.jpg"></a></td>
         <td><a href="picture/norika05.html"><img src="thumbnail/tn_norika05.jpg"></a></td>
@@ -48,9 +49,9 @@
         <td><a href="picture/hardproblem03.html"><img src="thumbnail/tn_hardproblem03.jpg"></a></td>
         <td><a href="picture/hardproblem02.html"><img src="thumbnail/tn_hardproblem02.jpg"></a></td>
         <td><a href="picture/collabo15.html"><img src="thumbnail/tn_collabo15.jpg"></a></td>
-        <td><a href="picture/collabo14.html"><img src="thumbnail/tn_collabo14.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/collabo14.html"><img src="thumbnail/tn_collabo14.jpg"></a></td>
         <td><a href="picture/nozomi12.html"><img src="thumbnail/tn_nozomi12.jpg"></a></td>
         <td><a href="picture/collabo12.html"><img src="thumbnail/tn_collabo12.jpg"></a></td>
         <td><a href="picture/riko10.html"><img src="thumbnail/tn_riko10.jpg"></a></td>
@@ -58,9 +59,9 @@
         <td><a href="picture/riko09.html"><img src="thumbnail/tn_riko09.jpg"></a></td>
         <td><a href="picture/nozomi10.html"><img src="thumbnail/tn_nozomi10.jpg"></a></td>
         <td><a href="picture/hardproblem01.html"><img src="thumbnail/tn_hardproblem01.jpg"></a></td>
-        <td><a href="picture/collabo05.html"><img src="thumbnail/tn_collabo05.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/collabo05.html"><img src="thumbnail/tn_collabo05.jpg"></a></td>
         <td><a href="picture/norika04.html"><img src="thumbnail/tn_norika04.jpg"></a></td>
         <td><a href="picture/nozomi08.html"><img src="thumbnail/tn_nozomi08.jpg"></a></td>
         <td><a href="picture/riko08.html"><img src="thumbnail/tn_riko08.jpg"></a></td>
@@ -68,9 +69,9 @@
         <td><a href="picture/riko07.html"><img src="thumbnail/tn_riko07.jpg"></a></td>
         <td><a href="picture/nozomi06.html"><img src="thumbnail/tn_nozomi06.jpg"></a></td>
         <td><a href="picture/riko06.html"><img src="thumbnail/tn_riko06.jpg"></a></td>
-        <td><a href="picture/riko05.html"><img src="thumbnail/tn_riko05.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/riko05.html"><img src="thumbnail/tn_riko05.jpg"></a></td>
         <td><a href="picture/janedoe02.html"><img src="thumbnail/tn_janedoe02.jpg"></a></td>
         <td><a href="picture/norika03.html"><img src="thumbnail/tn_norika03.jpg"></a></td>
         <td><a href="picture/nozomi03.html"><img src="thumbnail/tn_nozomi03.jpg"></a></td>
@@ -78,9 +79,9 @@
         <td><a href="picture/collabo02.html"><img src="thumbnail/tn_collabo02.jpg"></a></td>
         <td><a href="picture/norika02.html"><img src="thumbnail/tn_norika02.jpg"></a></td>
         <td><a href="picture/nozomi02.html"><img src="thumbnail/tn_nozomi02.jpg"></a></td>
-        <td><a href="picture/riko01.html"><img src="thumbnail/tn_riko01.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/riko01.html"><img src="thumbnail/tn_riko01.jpg"></a></td>
         <td><a href="picture/nozomi01.html"><img src="thumbnail/tn_nozomi01.jpg"></a></td>
         <td><a href="picture/norika01.html"><img src="thumbnail/tn_norika01.jpg"></a></td>
         <td><a href="picture/janedoe01.html"><img src="thumbnail/tn_janedoe01.jpg"></a></td>
@@ -95,22 +96,26 @@
     <caption>気分転換シリーズ</caption>
     <tbody>
       <tr>
+        <td><a href="picture/rc22.html"><img src="thumbnail/tn_rc22.jpg"></a></td>
+        <td><a href="picture/rc21.html"><img src="thumbnail/tn_rc21.jpg"></a></td>
         <td><a href="picture/rc20.html"><img src="thumbnail/tn_rc20.jpg"></a></td>
         <td><a href="picture/rc19.html"><img src="thumbnail/tn_rc19.jpg"></a></td>
         <td><a href="picture/rc18.html"><img src="thumbnail/tn_rc18.jpg"></a></td>
         <td><a href="picture/rc17.html"><img src="thumbnail/tn_rc17.jpg"></a></td>
         <td><a href="picture/rc16.html"><img src="thumbnail/tn_rc16.jpg"></a></td>
         <td><a href="picture/rc15.html"><img src="thumbnail/tn_rc15.jpg"></a></td>
-        <td><a href="picture/rc14.html"><img src="thumbnail/tn_rc14.jpg"></a></td>
-        <td><a href="picture/rc09.html"><img src="thumbnail/tn_rc09.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/rc14.html"><img src="thumbnail/tn_rc14.jpg"></a></td>
+        <td><a href="picture/rc09.html"><img src="thumbnail/tn_rc09.jpg"></a></td>
         <td><a href="picture/rc08.html"><img src="thumbnail/tn_rc08.jpg"></a></td>
         <td><a href="picture/rc07.html"><img src="thumbnail/tn_rc07.jpg"></a></td>
         <td><a href="picture/rc06.html"><img src="thumbnail/tn_rc06.jpg"></a></td>
         <td><a href="picture/rc05.html"><img src="thumbnail/tn_rc05.jpg"></a></td>
         <td><a href="picture/rc04.html"><img src="thumbnail/tn_rc04.jpg"></a></td>
         <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
+      </tr>
+      <tr>
         <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
         <td><a href="picture/rc01.html"><img src="thumbnail/tn_rc01.jpg"></a></td>
       </tr>
