表現の修正

--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -79,7 +79,7 @@
 「あ、あははは……。ごめんごめん。片手で引っ張り上げられるかなーと思ったんだけど……」
 　よろよろと立ち上がった時点でリコはすでに半泣きだった。だが目的の物はもうすぐそこにそびえ立っている。
 　高台の頂上には開けた夜空と、その闇をひときわ黒く切り取る背の高い影があった。骨組みだけの四角柱に直方体の箱を乗せたような形状をしていて、地上からの高さはざっと数メートルくらい。真揺ニュータウンの街開きに先立って建てられた展望台である。
-　かつては国の偉い人がここから宅地造成の様子を視察したと聞いたことがあるが、そんなものは最早はるか昔の話。街開きから数十年を経た今となっては地元の幼稚園生が遠足でやってくる程度の寂れたローカルスポットである。ましてや今は開園時間外。こんな時間の場所に一体誰が居ようか。そう高をくくって階段を上り、展望室へと足を踏み入れた瞬間。
+　かつては国の偉い人がここから宅地造成の様子を視察したと聞いたことがあるが、そんなものは最早はるか昔の話。街開きから数十年を経た今となっては地元の幼稚園生が遠足でやってくる程度の寂れたローカルスポットである。ましてや今は開園時間外。こんな場所に一体誰が居ようか。そう高をくくって階段を上り、展望室へと足を踏み入れた瞬間。
 「…………」
 　居た。しかも男女のカップル。その上思いっきりベタベタと抱き合っている最中だった。だがその先客も希海とリコを見るやいなや、ふたりの横を通り抜けてそそくさと何処かへ行ってしまう。やけに焦った素振りを見せていたから、多分、ひと気のないこの場所で何ぞ卑猥なことでもしようと企んでいたのだろう。ざまあみろだと希海は思う
 「……はぁ」
@@ -112,7 +112,7 @@
 「いえ……私こそ。ありがとうございます。わがままに付き合ってもらって……。えっと、その……」
 　そしてまた沈黙。リコは少しだけ言いにくそうに下を向き、首からぶら下がった赤いマフラーを手に取ると
 「さっきも言いましたけど、私……ずっと気付いてたんです。希海さんが恥ずかしそうにしてたこと」
-「…………え？」
+「え？」
 「でも『恥ずかしいなら外しましょうか』っていうその一言が、どうしても言えなかったんです。おかしいですよね。たった一言、ほんの少し声を出すっていうそれだけのことなのに」
 　そしてリコはくすりと笑った。
 「多分、楽しかったんです。楽しかったから、その一言が言えなかったんだと思います。だって私、今までに誰かとこういうことした経験がないから……」
@@ -162,7 +162,7 @@
 「あ、ああ、あの……、え、えっと……」
 　あまりに突然すぎて何を言えば良いかが分からなかった。頭の中が真っ白になる、とは正にこのような状況のためにある言葉なのだろう。言い訳は愚か、電源を切ってそのまま逃げてしまいたいという願望すら浮かんでこない。
 「少し話があります。要件は……分かってますね」
-　電話口の落ち着き払った声は考える暇すら与えてくれず、一方の希海は怯えた子供のように力ない返事を返すことしかできない。
+　だが電話口の落ち着き払った声は考える暇すら与えてくれず、一方の希海は怯えた子供のように力ない返事を返すことしかできない。
 「それより今どこに居ますか。ひょっとして外出先ですか」
 「い、いえ。ち、違います。自宅です」
 　慌てて取り繕った。別に外出先であろうがなかろうが、希海が長い間大学に行かず怠惰を貪っていた事実は動かしようがないというのに。多分このとき希海の脳裏は、いや、知覚できない深層心理は夏の海のことを思い出してたのだろう。また大学へ行かずに遊んでいる。そう思われることの恐怖が、この無意味な嘘につながったのだ。
