--- a/hardproblem/4-04.html
+++ b/hardproblem/4-04.html
@@ -16,7 +16,8 @@
 <div class="text">
 　震える脚で大学へ向かった。
 　中央地区センターから真浜大学へは区営バスで約十分。仕事帰りのサラリーマンや遊び終わった若者たちで溢れかえる薄暗い車内。バスが停留所に止まり、人が少なくなるにつれて動悸が大きくなってくる。終点の真浜大本部前に着いた後も、希海はしばらく座席から立ち上がれずにいた。
-　運転手に促されバスを出る。足取りがおぼつかずタラップを降りるたびに転けそうになった。切り刻むような北風が身をいっそう強く縮こませるが、希海はその場から動こうとはしなかった。バスのエンジン音が小さくなると、あたりは静寂に包まれる。学外の市道から小さく聞こえてくる車のクラクションと低いうなりを上げるエアコンの室外機。すがるような気持ちで見上げた空には、底のない暗闇と街の光に照らされて銀色に輝く雲が見えた。
+　運転手に促されバスを出る。足取りがおぼつかずタラップを降りるたびに転けそうになった。切り刻むような北風が身をいっそう強く縮こませるが、希海はその場から動こうとはしない。
+　バスのエンジン音が小さくなると、あたりは静寂に包まれる。学外の市道から小さく聞こえてくる車のクラクションと低いうなりを上げるエアコンの室外機。すがるような気持ちで見上げた空には、底のない暗闇と街の光に照らされて銀色に輝く雲が見えた。
 　もう何年も行ってない図書館の横を過ぎ去り、シャッターの降りた購買部を突っ切る。できることならこのままずっとひと気のないキャンパスを歩いていたい。往来のある明るい室内ではなく、この薄暗い場所にいつまでも留まっていたい。目的地が近づくほどに、そんな欲求が頭のなかに湧き上がっては消えていく。だが足を止めれば二度と歩き出せないような気がして、希海はただひたすらに歩き続けるしかなかった。
 　そしてたどり着いた自然科学部棟の建物。七階建ての無骨なコンクリートの塊が闇夜を黒く切り抜く様はまるで空間にぽっかりと穴が空いてしまったかのよう。すでに何度も見てきたはずなのに、今の希海にはそれがまるで地獄か何かの入り口のように思えてならなかった。
 　希海は正門の前に立つと、慌てたような動作でサイフを取り出した。この時間帯は扉にロックが掛かっている。学生証を読み取り機にかざすとピッという音と共に鍵の外れる音。ノブに伸ばした手が一瞬恐怖で固まるが、希海は息を止めるとそれを一気に押し開けた。
@@ -68,13 +69,17 @@
 　じゃあ一体どうすれば、その意志というものを持つことができたのだろう。一体何が原因で、自分はこんな人間になってしまったのだろう。幼少期の教育？　生活環境？　それとも単なる遺伝？　あるいは何の意味もない偶然――いや、教育にせよ環境にせよ遺伝にせよ、自分の手の届かない部分で既に決まってしまっているという意味において、それらはすべて偶然性の賜物だ。
 　考えてみれば当たり前の話だった。すべての事象には原因があるのだ。疑問を持つことを知った子供のように『どうして？』を繰り返し物事の原因を辿っていくと、いつかは自分の操作しえない領域に飛び出てしまう。自分の意志で大学へ行けなかったのも、いつの間にか臆病が板についてしまったのも、小さい頃からのくせっ毛も、みんなそう。そしてその因果の玉突きをどこまでも遡った先にあるものは、宇宙の誕生でしかない。
 （なんだ結局……）
-　結局、どうしようもないのだ。自分は、この世界を支配する自然の法則に、宇宙が火の玉だった頃から連綿と続く因果の玉突きに翻弄されるだけの、ちっぽけな存在でしかないのだ。
+　結局、どうしようもなかったし、これからもどうしようもないのだ。自分は、この世界を支配する自然の法則に、宇宙が火の玉だった頃から連綿と続く因果の玉突きに翻弄されるだけの、ちっぽけな存在でしかない。
 （でも……だったらどうして……）
 　どうして心なんてあるんだろう？
+　ふと、そんなことを思う。
 　生まれも育ちも能力も、意思ですら自ら決められないというのに、どうして自分たちは泣いたり笑ったりしないといけないのだろう。どうして自分は、心なんてない機械に生まれなかったのだろう。
 　心とは、さながら扉のない部屋だ。窓の向こうにはときに醜く、ときに美しい世界が広がっているというのに、自分はその光景を部屋から眺めて泣いたり笑ったりすることしかできないのだ。いくら手を伸ばしても触れられず、どれだけ叫ぼうがその声が伝わることはない。まるで呪いだ、と希海は思った。
 　鼻先に冷たいものが触れる。
-　腫れたまぶたを開いて見てみると、ちらちらと舞い降りる白い雪が見えた。そういえば今日は雪が降ると言っていた。このまま地べたに寝っ転がっていると、風邪を引くくらいじゃ済まなくなるかもしれない。そんな考えが頭を過ったが、立ち上がろうとする気は一向に起きなかった。何もせず、ただひたすらに夜空を眺めていると、不意にその銀雲が途切れる。隙間から覗くのは、星ひとつない真っ黒な闇。一切の熱を吸い取ってなおその<ruby>輻射<rp>《</rp><rt>いろ</rt><rp>》</rp></ruby>を変えようとしない宇宙の黒だった。
+　腫れたまぶたを開いて見てみると、ちらちらと舞い降りる白い雪が見えた。そういえば今日は雪が降ると言っていた。このまま地べたに寝っ転がっていると、風邪を引くくらいじゃ済まなくなるかもしれない。そんな考えが頭を過ったが、立ち上がろうとする気は一向に起きなかった。
+　十二月の下旬。これから本番に向かおうとする冬の空気は緩やかに、しかし確実に体温を奪っていく。背中から染みこむ冷気、指先から逃げていく熱。だが希海は、それでも良かった。いっそこのまま体中の熱を捨ててしまいたいと、そう思った。熱が抜けて、冷たい機械になればいい。泣きも笑いもしない、機械になればいい。そうすれば辛いことも悲しいこともなくなる。
+　何もせず、ただひたすらに夜空を眺めていると、不意にその銀雲が途切れた。そしてその隙間から覗くのは、星ひとつない真っ黒な闇。
+　一切の熱を吸い取ってなおその<ruby>輻射<rp>《</rp><rt>いろ</rt><rp>》</rp></ruby>を変えようとしない宇宙の黒だった。
 </div>
 
     <div id="footer" v-component="hpft-page-footer"></div>
