--- a/hardproblem/4-05.html
+++ b/hardproblem/4-05.html
@@ -26,7 +26,7 @@
 　希海の心は日に日に追い詰められ、学校を休みがちになった。そしてある日、悔しさで枕を濡らしながら眠りについた後、気づけばこの場所に来ていたのだ。
 （ひょっとして……）
 　私はまたこの場所へ戻ってきてしまったのだろうか？
-　いや、その答えは否だ。もし希海が閉律症を患ってしまったのなら、この目の前の少女の存在は一体何なのだ。それに<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>は？　今ここに立っている自分の肩口には何も見えないばかりか、肝心の<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>はその主を守るかのように、膝を抱えうずくまる少女の周りを悲しそうに漂っている。形は両の手に乗るくらいの金属の箱。希海が昔持っていたオルゴールである。その金色の箱から奏でられるメロディは単調で懐かしく、そしてどこか切ない。音楽はまるで始まりも終わりも知らぬかのようにいつまでもいつまでも続いており、箱の上では小さな<ruby>人形<rp>《</rp><rt>ひとがた</rt><rp>》</rp></ruby>をした装飾がそれに合わせてくるくると踊っていた。
+　いや、その答えは否だ。もし希海が閉律症を患ってしまったのなら、この目の前の少女の存在は一体何なのだ。それに<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>は？　今ここに立っている自分の肩口には何も見えないばかりか、肝心の<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>はその主を守るかのように、膝を抱えうずくまる少女の周りを悲しそうに漂っている。形は両の手に乗るくらいの金属の箱。希海が昔持っていたオルゴールである。その白銀の箱から奏でられるメロディは単調で懐かしく、そしてどこか切ない。音楽はまるで始まりも終わりも知らぬかのようにいつまでもいつまでも続いており、箱の上では小さな<ruby>人形<rp>《</rp><rt>ひとがた</rt><rp>》</rp></ruby>をした装飾がそれに合わせてくるくると踊っていた。
 　ああ、そうだ。
 　希海は思い出す。いつからか思うようになっていたこと。自分の中にあまりにも深く根ざしすぎて、いつの間にかその始まりを忘れてしまっていたこと。
 　――機械になりたい
