表現の修正

--- a/hardproblem/5-01.html
+++ b/hardproblem/5-01.html
@@ -30,7 +30,7 @@
 　ここ数日、リコはずっとこんな様子だった。
 　時間ギリギリまで寝ていたい希海はあまり朝食を食べてくれないし、その希海が大学へ行ってしまっている以上、昼食の用意も必要なければ部屋もほとんど散らからない。掃除機をかけたところで狭い部屋なのですぐに終わってしまうし、洗うべき衣服だって一日に一人分しか出ない。そんなわけでリコはここ数日、暇を持て余してはこうして勉強を進めることにしていた。
 　かりかり、と規則的にペンを動かす音。
-　やがて計算が完了したのか、少女はペンを置くとテキストのページをめくって答えを確認する。どうやら正解だったようだ。少女はふぅと一息つくと、そのまま教科書を閉じて立ち上がった。そのまま部屋の隅にまで歩いて行き、ベッドに置いてあった時計を手に取り時刻を確認しするも、部屋の主が帰ってくるまでにはまだかなり時間がある。
+　やがて計算が完了したのか、少女はペンを置くとテキストのページをめくって答えを確認する。どうやら正解だったようだ。少女はふぅと一息つくと、そのまま教科書を閉じて立ち上がった。そのまま部屋の隅にまで歩いて行き、ベッドに置いてあった時計を手に取り時刻を確認するも、部屋の主が帰ってくるまでにはまだかなり時間がある。
 　ちらりと窓から外の様子を窺う。
 　だが、ひと気のない通りでは木々が木枯らしに吹かれているだけで、誰かが通る気配など一向になかった。ましてや少女の主の姿など……。
 　おそらく希海は今日も夜遅くに帰ってくるのだろう。今晩も食事の仕度は必要なさそうだとリコは思った。最近の希海はいつも大学で食事をすませてくる。昨日もそうだったし一昨日もそうだった。そして今日も多分――
