--- a/hardproblem/5-02.html
+++ b/hardproblem/5-02.html
@@ -19,7 +19,7 @@
 　そう言いたくなる気持ちは分からないでもない。確かに元からやる気のかけらもない人間だったし、その上真面目に研究をしたところで単位は出してもらえないという教授のお墨付きだ。そんな状況でモチベーションを上げろという方が無理があると思うのだが、まあ事実は事実である。
 　だが分からないことを自分で調べろと言われ、『調べ方が分からない』と反論した後のセリフとしてこれはどうかと希海は思う。何を調べたらいいのかも分からない状況で『分からないなら調べろ』と言われても、右も左も分からない自分は途方に暮れるだけである。
 （……もう知るか）
-　舌打ちをして、パソコンの電源を落とした。調べ物は一向に解決していない。椅子に座ったまま大きく伸びをして時計を見れると、短針は午後の一時を少し回ったあたりを指していた。どうりで腹が減るわけだ。最近はずっと朝を抜いてばっかりなので、昼を回った頃にはいつも強い空腹を覚える。
+　舌打ちをして、パソコンの電源を落とした。調べ物は一向に解決していない。椅子に座ったまま大きく伸びをして時計を見ると、短針は午後の一時を少し回ったあたりを指していた。どうりで腹が減るわけだ。最近はずっと朝を抜いてばっかりなので、昼を過ぎた頃にはいつも強い空腹を覚える。
 （仕方ない……）
 　どうせこんな作業を続けても効率が悪いだけだ。一旦学食にでも行こう。希海はそう考えると鞄から財布だけを引っ張り出し、乱暴にケツポケットへ突っ込んで学生部屋を出た。
 　扉を開けると、無機質な白い廊下の向こうから談笑する声がこちらへ向かってくる。声の主は複数名。男が三人に女が一人。同じ研究室の人間たちだった。希海はポケットから携帯端末を取り出すと、それをわざとらしくいじりながら彼らとすれ違う。メールボックスを開き新着問い合わせのボタンを押すと、処理中を示す小さな円がくるくると画面上で回転をはじめた。もちろんメールのチェックなどしてみたところでスパム以外の何も来ていないであろうことは容易に想像がつく。だがそんな無意味な行動とて彼らと目を合わさずにすれ違うだけの時間を稼いでくれるのには十分だった。
