--- a/hardproblem/5-04.html
+++ b/hardproblem/5-04.html
@@ -124,7 +124,7 @@
 　そう懇願するリコの目には、うっすらと涙すら浮かんでいる。その姿はとても儚く見る者を憐憫の情へと突き動かすのに十分だった。
 「え……えっと……」
 　だが今の希海には、その涙がとてつもなく重たく感じられてならない。
-　なぜなら希海はここ数日、ずっと大学にかかりっきりなのだ。今日も昨日も、その前の日も、朝早くから夜遅くまでずっと大学にこもりっきり。それは明日以降もそうだし年末年始だろうが関係ない。希海は、自分自身のことで精一杯なのだ。それは時間的にもそうだし、精神的にもだ。
+　なぜなら希海はここ数日、ずっと大学にかかりっきりなのだ。今日も昨日も、その前の日も、朝早くから夜遅くまでずっと大学にこもりっきり。そしてそれは明日以降もそうだし年末年始だろうが関係ない。希海は、自分自身のことで精一杯なのだ。時間的にも、精神的にも。
 「……今すぐはだめですか？」
 「それだと終電なくなって帰れなくなっちゃうよ。タクシーだと帰れなくもないけど、私あした朝早いし……。そう、それで明日も大学へ行かなきゃいけないから……」
 「なら私が一人で……！」
