--- a/hardproblem/5-06.html
+++ b/hardproblem/5-06.html
@@ -68,7 +68,7 @@
 「希海さん」
 　振り返れば、いつの間にか背後で立ち止まっているリコ。
 「こっちですよ」
-　リコに先導されて入ったのは脇の小道だった。
+　リコに先導されて入ったのは国道脇の小道だった。
 　それまでの上り坂にあったセンターラインは最早この通りにはない。車のすれ違いすら難しいような生活道路が網の目のように交差する街区。細い通りの脇には築数十年の古びた戸建住宅が立ち並んでおり、西部解放戦役はおろか第二次大戦よりも昔に建てられたのではないかと疑いたくなるような木造建築の姿もあった。もちろんこの住宅街に小奇麗な庭なんてものはありやしない。ひとたび火の手が上がればいとも簡単に区画全体が延焼してしまいそうなほどに、古びた住宅群が密集して建てられている。その光景はニュータウン育ちの希海にとってさながら異界だ。迷いのない足取りで進んでいくリコの背中が少しだけ遠い。
 「私が――」
 　その背中が、不意に声を上げる。
@@ -84,7 +84,7 @@
 
 　リコの足が止まった。
 
-　狭い道路に小さな平屋建ての密集する迷路のような下町。そんな海を望む古くからの町並みを抜けた先には、かつてリコとその主人が暮らしていた住宅公社の団地がある……はずだった。
+　狭い道路に小さな平屋建てが密集する迷路のような下町。そんな海を望む古くからの町並みを抜けた先には、かつてリコとその主人が暮らしていた住宅公社の団地がある……はずだった。
 「リコ……？」
 　事情を飲み込めない希海の間抜けな声。呆然と立ち尽くす少女の背中に疑問を抱き、その視線の先を追いかけてみて、ようやくすべてを理解する。
 　そこにあったのは、かつて少なからぬ人々が人生の一期間を過ごしていたであろう団地の……残骸だった。
