--- a/hardproblem/5-07.html
+++ b/hardproblem/5-07.html
@@ -27,7 +27,7 @@
 『――ああ、一時間かそこらで着くと思う。じゃあ、また』
 　東はそう告げると一方的に受話器を置いた。ブツリというノイズとビープ音が短く響き、同時にスピーカーの向こうから気配が消える。希海は携帯端末をコートのポケットにしまうと、重い足取りでリコの方に戻っていった。
 　砂を踏みしめてリコの傍に立つと、そのつむじに希海の影が暗く差し込んだ。だが座り込んだままの少女はまるでこちら存在に気付いていないかのように身動きひとつ取ろうとしない。
-　少女がそうしているように、希海も砂の上に腰を降ろす。冬の海風に冷やされた砂は驚くほど冷たく、デニム越しに体温が奪われていくのを感じた。
+　少女がそうしているように、希海も砂の上に腰を降ろす。冬の海風に曝された砂は驚くほど冷たく、デニム越しに体温が奪われていくのを感じた。
 「…………」
 　んっ、っと小さく咳払い。口からこぼれそうになった溜息を慌てて飲み込んだ。
 　無理もない。今日は一日歩きっぱなしで、肉体も精神も疲弊しきっている。リコに言われるがままにここまでやってきた。連日の研究室通いで疲れきっていたというのに朝早く起きた。だが、その結果はどうだっただろう。今日一日の出来事がリコにとって……、自分にとってプラスに働いただろうか。
@@ -85,7 +85,7 @@
 　希海は乱暴に携帯端末を取り出すと立ち止まって液晶パネルの表示に目を落とす。発信者は、東だった。
 　希海は眉を潜めて舌打ちをする。
 　今更一体何の用だ。まだ何か言うことがあるのか。だが残念だったな。お前がさっさと来ないから、もうすべては手遅れだ。自分は二度とリコの元へ行かない。向こうが謝るまで、絶対に許さない。
-　希海は反射的に着信拒否のボタンへと手を伸ばした。もう東に話すことなど何もない。リコの居場所はＧＰＳでも何でも使って勝手に調べればいい。そう思った。
+　希海は反射的に応答拒否のボタンへと手を伸ばした。もう東に話すことなど何もない。リコの居場所はＧＰＳでも何でも使って勝手に調べればいい。そう思った。
 　だが携帯端末をポケットにしまい込むや否や、その小さな機械は再びけたたましい着信音を周囲に鳴り響かせる。発信者は……やはり東。りんりんと耳障りなベルの音が希海の頭をかき乱し、収まりかけていた苛立ちに油を注ぐ。
 　うるさい。
 　うるさいうるさい。
