--- a/hardproblem/5-08.html
+++ b/hardproblem/5-08.html
@@ -88,7 +88,7 @@
 　だが、六畳ちょっとの狭い部屋には投げつけられそうなものはそう多くはない。本棚に整然と並べられた書籍の類は不可能。セルロース相手だとほとんど力が出せないからだ。木製の机やベッド……これもだめ。布団……まさか。
 　そんな舐めるような希海の目がある一点で止まった。窓の外の光を背負って立つ少女の手元。窓辺に置かれた鉢植えの花である。これなら重さも申し分ない。
 「私も中学校の頃、リコと同じようにこういう場所へ来ちゃったことがあってさ」
-　得物を決めた希海は声を押し殺してリコに語りかける。もう一度リコに帰る気があるのかを問い、それでも帰還を拒否するのであれば……即座にこれを<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>に向かって投げつけなければ。
+　得物を決めた希海は静かにリコに語りかける。もう一度リコに帰る気があるのかを問い、それでも帰還を拒否するのであれば……即座にこれを<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>に向かって投げつけなければ。
 「全部嫌になっちゃったっていうリコの気持ちは私もよく分かるけど……。でもさ、きっと生きてたら何かいいことあると思う」
 　ひとたび決意すると膝が震えだす。そんな自身の内の臆病さから目をそらすように、希海はあえて楽天的な素振りで話を続けた。本当なら形式的な問いかけなどなしに、不意打ちで<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>を破壊すれば良かったのだろう。だがその方法はリコに対する裏切りのような気がしてしまって希海にはどうしてもできなかった。
 「たぶんこれはロボットもそうなんだけど、人間ってわりと鈍感にできてるもんでさ。ちょっとつらいことがあっても、一年や二年もすれば意外と忘れちゃうんだと思う。だから……」
@@ -119,11 +119,11 @@
 　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が光った。
 　まるで溶鉱炉のようなオレンジと赤の混ざった光。希海の網膜がその輝きを捉えたその直後、一瞬遅れてパルスのような突風が全身に叩きつけられた。
 　暗転する視界。背中に走る重い衝撃。
-　気付いたときには壁際まで吹き飛ばされてうずくまっていた。慌てて立ち上がった希海の目に飛び込んできたものは、相変わらず窓辺に佇む少女とその肩口で踊るように自転する真っ黒な<ruby>正四面体対称<rp>《</rp><rt>テ ト ラ ヘ ド ラ ル</rt><rp>》</rp></ruby>の立体物。角の落ちた六角柱だったはずのそれは、今や海辺の消波ブロックのような形状に変貌してしまっている。
+　気付いたときには壁際まで吹き飛ばされてうずくまっていた。慌てて目を見開いた希海の視界に飛び込んできたものは、相変わらず窓辺に佇む少女とその肩口で踊るように自転する真っ黒な<ruby>正四面体対称<rp>《</rp><rt>テ ト ラ ヘ ド ラ ル</rt><rp>》</rp></ruby>の立体物。角の落ちた六角柱だったはずのそれは、今や海辺の消波ブロックのような形状に変貌してしまっている。
 「……これが私の使える力です」
 　植木鉢は床に落ちて粉々に砕け散ってしまっている。一体何が起こったのか、希海にはまったく分からなかった。
 「だから……何なのよ。私だって伊達に三年間もこんなことしてたわけじゃない」
-　吐き捨てるようにつぶやき、リコの足元に散らばった植木鉢の破片を手元に引き寄せた。破片はまるで一つ一つが命を持っているかのように別々の楕円を描き、希海の周りをくるくると周回し始める。その中には尖ったものや鋭利なものも含まれており、これを四方八方から一斉に投げつければ大抵の相手を戦闘の継続が不可能なまでに痛めつけられるだろう。
+　吐き捨てるようにつぶやき立ち上がると、リコの足元に散らばった植木鉢の破片を手元に引き寄せた。破片はまるで一つ一つが命を持っているかのように別々の楕円を描き、希海の周りをくるくると周回し始める。その中には尖ったものや鋭利なものも含まれており、これを四方八方から一斉に投げつければ大抵の相手を戦闘の継続が不可能なまでに痛めつけられるだろう。
 「…………」
 　威嚇するようにリコを睨みつけると、手に汗が浮かんだ。
 　本気でやるのか？　まさか。これは単なる脅しだ。相手を交渉のテーブルにつかせるためのナイフでしかない。
