--- a/hardproblem/6-01.html
+++ b/hardproblem/6-01.html
@@ -60,13 +60,13 @@
 　竹見さんとは入学年度が同じだ。しばらく大学へ来ていなかった間に一つ上の先輩になってしまっていたが、だからといって急に敬語で話すのはどこかぎこちない。だから希海は知り合ったときのままの口調で竹見さんに接するし、彼女もそれを咎めなかった。
 「すごいなあ。<ruby>博士<rp>《</rp><rt>ドクター</rt><rp>》</rp></ruby>になったら何本も論文書かないといけないんでしょ。私には絶対無理」
 「もう、そんな脅さないでよ。多分、慣れだよ慣れ」
-　静まり返った大学のメインストリートに、二人の話し声が反響した。相変わらず殺風景なキャンパス。明らかに車での来学を意識した広い通りと、規則的に並ぶ街灯の白い光。右手にはラジオアイソトープの不法投棄で昨年ニュースを賑わせていた<ruby>核物理研究センター<rp>《</rp><rt>Ｒ　　　Ｃ　　　Ｎ　　　Ｐ</rt><rp>》</rp></ruby>が闇夜を黒く切り抜き、左手には何に使われているかよく分からない工学部ののっぽビルが航空障害灯の赤い光を頂上にじっとに抱いていた。だが立て看板や壁新聞、ベンチに座って世間話に花を咲かせる人達なんてどこにも居やしない。この空間には多くの大学にあるはずの混沌とした気配が存在しないのである。幅の広い道路と潤沢な緑地、そして整然と並ぶ飾り気のない箱型の建物。まるで企業か何かの研究施設だ。昼間にここを歩けばさぞ小奇麗な風景が見れただろう。だが生憎と今は夜である。タイヤがアスファルトを踏みしめる音はその鳴りを潜め、緑地の木々はそのシルエットをうっすらと闇夜に浮かばせるだけだ。こうして二人だけで広い通りを歩くと、まるで人の居ない廃墟に来てしまったような錯覚に陥ってしまう。
+　静まり返った大学のメインストリートに、二人の話し声が反響した。相変わらず殺風景なキャンパス。明らかに車での来学を意識した広い通りと、規則的に並ぶ街灯の白い光。右手にはラジオアイソトープの不法投棄で昨年ニュースを賑わせていた<ruby>産業科学研究所<rp>《</rp><rt>Ｉ　Ｓ　Ｉ　Ｒ</rt><rp>》</rp></ruby>の建物が闇夜を黒く切り抜き、左手には何に使われているかよく分からない工学部ののっぽビルが航空障害灯の赤い光を頂上にじっとに抱いていた。だが立て看板や壁新聞、ベンチに座って世間話に花を咲かせる人達なんてどこにも居やしない。この空間には多くの大学にあるはずの混沌とした気配が存在しないのである。幅の広い道路と潤沢な緑地、そして整然と並ぶ飾り気のない箱型の建造物。まるで企業か何かの研究施設だ。昼間にここを歩けばさぞ小奇麗な風景が見れただろう。だが生憎と今は夜である。タイヤがアスファルトを踏みしめる音はその鳴りを潜め、緑地の木々はそのシルエットをうっすらと闇夜に浮かばせるだけだ。こうして二人だけで広い通りを歩くと、まるで人の居ない廃墟に来てしまったような錯覚に陥ってしまう。
 　自然科学部棟から<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>門までは徒歩で十分弱。普段ならじれったく感じる道のりだったが、この時ばかりは不思議と短く思えた。
 「じゃあまた。明日の発表、頑張ってね」
 　そう言葉を交わし、ゲートの前で竹見さんと別れた。彼女の下宿先はここから少しばかり北に行ったところにある<ruby>熱砂<rp>《</rp><rt>あたさご</rt><rp>》</rp></ruby>地区だ。その小さな背中を少しばかり見送ると、希海は踵を返して反対方向へと歩き出す。大学前の通りは『かもめ池』から通じる水路に沿って、ゆるやかに蛇行していた。希海は左右から車が来ないことを確認すると、片道一車線の道路を横断して歩行者用の橋を渡った。ここから向こうは真揺ニュータウンだ。
 　目隠しと防音のために植えられた背の高い木々の列を横切り、希海は住宅街へと足を踏み入れる。連日の作業で疲労困憊の身からすると一刻も早く帰りたいところだったが、こうして歩みを進める内にそんな考えはどこかへと霧散してしまっていた。
 　この道は、高校の頃に使っていた通学路だ。
-　大学生になって家が少し遠くになってしまってからというもののすっかりご無沙汰だった道。もっとも当時は徒歩ではなく自転車だったし、ルートだって少しばかり違う。だが慣れ親しんだこの景色をゆっくりと歩けるのも、あと数回ほどしか無いのかもしれない。胸の奥の感傷がもぞもぞと動き出すのを感じた。
+　大学生になって家が少し遠くになってしまってからというもののすっかりご無沙汰だった道。当時とは少しばかりルートが違うが、慣れ親しんだこの景色をゆっくりと歩けるのもあと数回ほどしか無いのかもしれない。胸の奥の感傷がもぞもぞと動き出すのを感じた。
 　あと数回。そう、あと数回なのだ。
 　明日の卒研発表会と、いくつかの事務的なことを終えるともうこの大学に顔を見せることはなくなってしまう。足掛け五年。いや、希海の場合は隣の党立高校からの進学だったから、そちらも入れると八年である。そんな長きに渡って続いていたものが、今、終わろうとしているのだ。
 　――八年。
@@ -95,14 +95,14 @@
 　街灯が再び瞬き、あたりが一瞬闇に包まれる。東が靴底でアスファルトをこする音が暗闇に響き、息を吹き返した電灯の瞬きがアパートの白壁を弱々しく照らした。
 「あれから何人かにルーミングをやってもらったんだが、どれも駄目だったよ。依頼した人間は一種持ちばかりだったというのに、みな相手にならず逃げて帰ってきたらしい。普通の病気であれば粘り強く治療を続けるところなんだが、青山君も知っての通り時間が経つほどに閉律症の治療は困難を増すから今後の回復は見込めないだろう。だからな、もう眠らせてやろうと……そう決まったんだ」
 　そこまで一気に言い切ると、東は次いでリコの機能停止に関わる細かな説明を始めた。専用のソフトウェアを使ってバッテリー電圧を徐々に落としていくから苦しみはない。リコの<ruby>ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>に残っている個人情報は機能停止後にすべて消去される。残ったボディに関してはこちらで再利用することになるため引き渡しや火葬はできないが、形式的な葬儀は可能だし望むのなら髪の毛などパーツの一部を無償で譲り受けることだってできる。
-　東は終始苦々しい様子だった。多分、この説明はオーナーに対して必ず行わなければならないものなのだろう。書面上の所有権は東にあるとはいえ、事実上のオーナーは希海だ。そして同じような状況に陥ってしまった他のオーナーと同様、希海もそんな東の説明をどこか遠い国の話のように現実感がないままに聞いていた。
+　東は終始苦々しい様子だった。多分、この説明はオーナーに対して必ず行わなければならないものなのだろう。そして同じような状況に陥ってしまった他のオーナーと同様、希海もそんな東の説明をどこか遠い国の話のように現実感がないままに聞いていた。
 　――リコとは、もう二度と会えない。
-　そう頭の中で繰り返してみたものの、希海には近所の文具屋が閉店してしまった程度の喪失感しか持てなかった。自分がここまで冷淡な人間だったのかと倒錯した感慨さえ抱いてしまう。
+　そう頭の中で繰り返してみたものの、希海には近所の文具屋が閉店してしまったときと同じくらいの喪失感しか持てなかった。自分がここまで冷淡な人間だったのかと倒錯した感慨さえ抱いてしまう。
 「……青山君には、リコの最期を看取る気はあるかい？」
 「え、えっと」
 「言葉の通りだよ。リコの電源を落として眠らせてあげる話はさっきしたね。青山君にその場に同席する気はあるかい？　予定は明日の朝九時だ」
 「すいません。明日は……」
-「予定が入ってるのかい？　すまない。青山君からすると突然の話だったかも知れないが、ここ数日何度電話を掛けてもいっこうに繋がらなかったんだ。だがそういうことなら、こちらも日程を変更することはできる。一年に満たない付き合いだとは言え同じ家に暮らして苦楽を共にした仲だし、ちゃんと別れを告げておくべきだ。色々な思い出に……ね」
+「予定が入ってるのかい？　すまない。青山君からすると突然の話だったかも知れないが、そっちの電話は壊れてるようだし、ここ数日何度訪れてもいっこうに留守だったんだ。だから日程はもう動かせないが、同じ家に暮らして苦楽を共にした仲だしちゃんと別れを告げておくべきだと私は思う。色々な思い出に……ね」
 「リコとの……思い出……」
 　自ら口に出したその単語が凪いだ水面に一石を投じた。投げ入れられた小石は小さな波紋を作り、希海の内側に眠らせていた記憶たちを次々と引きずり起こす。まずはじめに浮かんだ光景は、怖いくらいに大きな青空とそこに浮かぶ小さな積乱雲。白いビーチに立った可愛らしい花柄の水着の少女。遊びに行った先で竹見さんに出会ってしまい、結局何もせずに帰ってしまった。秋には自転車の練習もした。結局リコが自転車に乗れるようになったのは、もう十一月も終わろうかという頃だった。冬。クリスマス・イブの日にとんでもないプレゼントをもらってしまい恥ずかしがりながら街を歩いた。突然掛かってきた大学からの電話。一転して終わりを告げた緩やかな日々。大学でが忙しくなって余裕がなくなっていたときにリコの記憶が戻ってしまって、そして――
 「私は……遠慮しておきます」
