--- a/hardproblem/6-02.html
+++ b/hardproblem/6-02.html
@@ -19,7 +19,7 @@
 　数日ぶりの我が家だったが、そのひどい有り様を見て希海はしばし固まってしまう。床には脱ぎ散らかした服が所狭しと散乱し、資料探しのためにあれでもないこれでもないとひっくり返した本棚は空席だらけ。台所には洗いもせずに浸け置いていた食器が積み重なり、長きに渡り放置されてきた三角コーナーの残飯が酸っぱい臭いを放っていた。
 　ちっ、とひとつ舌打ちをして荷物を置いた。こんなことになるならきちんと片付けてから家を出るべきだったのだ。もっとも、そんな暇があったかと問われれば甚だ疑問ではあるのだが、このゴミ溜めの中で寝る気にはなれない。
 　どうしたものか。ベッドに腰掛け、あたりを見回した。本は後でもいいとして臭いの出る台所は最優先で片付けておきたかった。幸いにも季節が季節なので変な虫が湧いたりはしないだろうが、それでも早めに何とかした方がいいのは間違いない。それに服だってさっさとハンガーに掛けておかないと形が崩れてしまうだろう。服か台所か、それとも両方やるのか、はたまた何もせずに寝てしまうのか。
-「あっ……」
+「あ……」
 　そんな逡巡をしていた希海の目にあるものが飛び込んできた。吸い寄せられるかのようにベッドから立ち上がり、脱ぎ捨てたワンピースの下から覗いている赤い毛糸の束を引っ張りだす。
 「これ……」
 　マフラーだった。
@@ -61,7 +61,7 @@
 　追いついた。だが、そう喜ぶのも束の間だった。
 　自動車の流れをせき止めていた信号が青に変わり、車の列は先頭から順にゆっくりと動き出してしまう。一台目のトラックは右折。二台目のバンは直進。そして三台目に位置していた東の軽は……右折。
 （まずい！　<ruby>中央環状<rp>《</rp><rt>ち　ゅ　う　か　ん</rt><rp>》</rp></ruby>に入られたら追いつけない！）
-　方向指示器のライトを見て、血の気が引いた。この交差点を右折した先にある中央環状線は片側三車線の高規格道路である。制限速度は下道の限界めいいっぱいである時速６０ｋｍに設定されているし、とりわけ立体交差が連続する真揺ニュータウン近辺などは高速道路とあまり区別がつかず、内側を並走する<ruby><span class="simplified">亚州高速</span><rp>《</rp><rt>アジアハイウェイ</rt><rp>》</rp></ruby></span>とほぼ同じ速度で車が流れていく。当然、自転車での通行は禁止だ。信号を曲がり、側道から本線に合流するまでの間に何としてでもケリを付けなければならない。希海は信号の手前で道路を右へ横切ると、そのままめいいっぱいペダルを漕いで自転車を進めた。
+　方向指示器のライトを見て血の気が引いた。この交差点を右折した先にある中央環状線は片側三車線の高規格道路である。制限速度は下道の限界めいいっぱいである時速６０ｋｍに設定されているし、とりわけ立体交差が連続する真揺ニュータウン近辺などは高速道路とあまり区別がつかず、内側を並走する<ruby><span class="simplified">亚州高速</span><rp>《</rp><rt>アジアハイウェイ</rt><rp>》</rp></ruby></span>とほぼ同じ速度で車が流れていく。当然、自転車での通行は禁止だ。信号を曲がり、側道から本線に合流するまでの間に何としてでもケリを付けなければならない。希海は信号の手前で道路を右へ横切ると、そのままめいいっぱいペダルを漕いで自転車を進めた。
 　だがいかんせん人の足だ。向こうが控えめな運転だとは言え、<ruby>内燃機関<rp>《</rp><rt>エ　ン　ジ　ン</rt><rp>》</rp></ruby>を搭載した車にはとても追いつくことはできない。必死に足を動かし気付いてもらおうと声を張り上げるが、シルバーの軽はどこ吹く風といった様子で速度を上げ、希海との距離がするすると広がってゆく。
 「東さん！　ちょっと東さんってば！　止まって！」
 　エンジン音が防音壁の内側に反響し、その叫び声は無情にもかき消される。側道を抜け、東の自動車が本線と合流した後も希海はペダル漕ぐのも止められなかった。
@@ -74,11 +74,10 @@
 　それまで青く光っていた対面の信号が赤に変わった。あと数秒もすれば再び車列は動き出してしまうだろう。このままだとさっきの二の舞いになるのは明らかだ。東の車が動き出す前に、何とかしなければならない。体力だってもう限界をとうに過ぎてしまっている。
 　そして無常にも信号が青に変わる。先頭車のブレーキランプが消えてテールランプへと切り替わると、それを合図とするかのように二台目のブレーキランプが陰った。次はそれを受けた三台目のドライバーが同じようにブレーキから足を離し、その次は四台目。まるで導火線である。この連鎖反応が東の元へ到達するまでの僅かな時間が、希海に残された猶予だった。
 　あと三台、あと二台、あと一台。
-　東の自動車からブレーキランプが消えると同時に、希海は喉が潰れそうなほどの声で呼びかけた。
 「東さん！！」
-　なりふりなと構っていられない。ただ、熱くなった胸で息をめいいっぱい吐き出す。希海は肺に残った空気の最後のひと塊まで絞りとるように身を乗り出しながらペダルを漕ぎ、そして
+　東の自動車からブレーキランプが消えると同時に、希海は喉が潰れそうなほどの声で呼びかけた。なりふりなと構っていられない。ただ、熱くなった胸で息をめいいっぱい吐き出す。希海は肺に残った空気の最後のひと塊まで絞りとるように身を乗り出しながらペダルを漕ぎ、そして
 　こけた。
-　地面に転がっていた空き缶を踏んづけてしまったのがその原因だが、希海にはそんなこと分かるはずもなかった。ぐるりと一周する視界に「まずい」と思ったのも束の間、すぐさまアスファルトの地面に叩きつけられる。真っ先に地面と接触するのは肩だ。自転車がクラッシュする音すら満足に聞こえなかったというのに、二の腕の付け根から出た嫌な音だけはしっかりと耳に入っていた。
+　地面に転がっていた空き缶を踏んづけてしまったのがその原因だが、希海にはそんなこと分かるはずもなかった。ぐるりと一周する視界に『まずい』と思ったのも束の間、すぐさまアスファルトの地面に叩きつけられる。真っ先に地面と接触するのは肩だ。自転車がクラッシュする音すら満足に聞こえなかったというのに、二の腕の付け根から出た嫌な音だけはしっかりと耳に入っていた。
 　信じられないような痛みが肩に走る。肌を焼くような熱さが肉の表層を駆け抜け、内側では神経を直接握りつぶされたような鈍い激痛が暴れ回っている。その筆舌に尽くし難い苦痛に耐えようと、希海は必死に歯を食いしばり爪を手のひらに食い込ませて地面をのたうった。こんな場所で寝転んでいてはいつ車に轢かれるか分かったものではなかったが、今はそんなことを考える余裕すらない。希海の脳裏を満たすのはでたらめに真っ白な痛覚のノイズであり、この騒音の前には周囲の車のエンジン音や扉の閉まるすらどこか遠く聞こえるほどだった。
 「お、おい青山君……。一体何を」
 　しばらく肩を押さえ必死で痛みを堪えていた希海に、頭上から声がかかった。うっすらと目を開けてそちらを見ると、そこには困惑した顔で車から出てきた東の姿。せわしないハザードランプの光が路面をちかちかとオレンジに照らしていた。
