--- a/hardproblem/7.html
+++ b/hardproblem/7.html
@@ -37,7 +37,7 @@
 「危ないわねえ。ちゃんと足元見なさいよ」
 　リコを地面に降ろし、投げ捨てたハンドバッグを拾い上げた。側面に付いていた砂を手で払い、よし、と小さく独りごちる。
 「そういえばリコはなんでここに？　買い物にでも行く途中だった？」
-　せっかく会ったのだから、荷物持ちくらい付き合ってやろうかと思ったが、リコは少しだけ気まずそうな表情を浮かべると、目線を逸らして言いにくそうにする。
+　せっかく会ったのだから、荷物持ちくらい付き合ってやろうかと思ったのだが、リコは少しだけ気まずそうな表情を浮かべると、目線を逸らして言いにくそうにする。
 「い、いえ……。そういう訳じゃ……ないんですけど……」
 「なによぉ。怪しいわね」
 　一体何の隠し事だろうか。わずかばかりの好奇心から気軽に問いただしてみたのだが、続くリコの返答は私の予想だにしないものだった。
