--- a/hardproblem/postscript.html
+++ b/hardproblem/postscript.html
@@ -18,7 +18,7 @@
 　このままだとどんな未来が待ち受けているのか、自分がどうすべきなのか。当時は幾度となくそんなことを考えましたが、これらの問いに対する答えなんて分かりきっていました。
 『このままでは自分は中退になる。だから今すぐ大学へ行け』
 　当たり前の話です。けれども当時の自分はそんな当たり前のことを分かっていながら、なお体を動かすことができませんでした。ただ顔を洗って、服を着替えて、大学へ行く。それだけのことがあの時の自分にはどうしてもできなかったのです。
-　そして自分ははこうも考えたんです。こんな状況に陥ってしまったのは一体どうしてだろう？　と。その答えはこうです。
+　そして自分は考えました。こんな状況に陥ってしまったのは一体どうしてだろう？　と。その答えはこうです。
 『すべては自分のせいだけど、自分がそうなってしまったのは誰のせいでもない』
 　人間なんて所詮は蛋白質でできたマシン――外界からの入力信号と逐次更新される脳の状態を変数として出力を返すだけの機械にすぎません。自分が大学へ行けないのは、行こうと思っても体が動いてくれないのは、自分の脳がそういう状態にあるからです。
 　では何故自分はそういう状態になってしまったんでしょう。一番最初に大学をさぼった日、ちゃんと起きて大学へ行けば良かったんでしょうか？
