--- a/hardproblem/references.html
+++ b/hardproblem/references.html
@@ -39,7 +39,7 @@
 <li class="ref_title">細野晴臣 - Ohenro-San</li>
 §4に出てきた八十八地区という地名の元ですね。お遍路さん→八十八ヶ所→八十八、みたいな。
 <li class="ref_title">細野晴臣 - Caravan</li>
-§6に出てきた熱砂という地名のインスピレーション元ですね。このおよびこのリファレンスに記載されている細野晴臣さんの曲はすべてOmni Sight Seeingというアルバムに収録されているんですが、真揺ニュータウンおよび近隣の地名は基本的にこのアルバムから取るようにしてます。
+§6に出てきた熱砂という地名のインスピレーション元ですね。このリファレンスに記載されている細野晴臣さんの曲はすべてOmni Sight Seeingというアルバムに収録されているんですが、真揺ニュータウンおよび近隣の地名は基本的にこのアルバムから取るようにしてます。
 <li class="ref_title">細野晴臣 - Laugh-Gas</li>
 フランスのクラブでライを演奏するアラブ人ミュージシャンに影響を受けて製作された曲。フランス→トリコロール→三色、というわけでエピローグに出てきた「三色彩道」の元ネタです。とは言え真揺ニュータウンのモデルになった千里ニュータウンにも同名の通りがあるんですけどね。
 <li class="ref_title">細野晴臣 - Pleocene</li>
