--- a/link.html
+++ b/link.html
@@ -30,7 +30,7 @@
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://amekura10.tumblr.com/" target="_blank"><span class="pbanner">全年齢向け文章置き場</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://ncode.syosetu.com/n2111bv/" target="_blank"><span class="pbanner">ナイトスプリンター</span></a></td>
-　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=13861560" target="_blank"><span class="pbanner">フナ</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=13861560" target="_blank"><span class="pbanner">　フ　ナ　</span></a></td>
 　　　　　</tr>
       <tr>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
@@ -56,19 +56,20 @@
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
 　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">　梟　流　</span></a></td>
-        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=13861560" target="_blank"><span class="pbanner">フナ</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://g-takanashi.tumblr.com/" target="_blank"><span class="pbanner">Takanashi Ya</span></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=13861560" target="_blank"><span class="pbanner">　フ　ナ　</span></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
         <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
-　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
       </tr>
       <tr>
+　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
  　　　　　　<td class="nobanner"><a href="http://asuka-46.lolipotouch.jp/" target="_blank"><span class="pbanner">Drawing of Asuka</span></a></td>
         <td class="nobanner"><a href="http://www.pixiv.net/novel/member.php?id=2444663" target="_blank"><span class="pbanner">hakoniwa(PYU)</span></a></td>
-　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
       </tr>
       <tr>
+　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
         <td class="banner"><a href="http://ugf.nengu.jp/index.html" target="_blank"><img src="banner/banner11.jpg"></a></td>
       </tr>
     </tbody>
