フナさん選定の曲を追加

--- a/hardproblem/references.html
+++ b/hardproblem/references.html
@@ -64,6 +64,8 @@
 読者が考えてくれたリコ視点ソング
 <li class="ref_title">KOKIA - 私の太陽</li>
 読者が考えてくれた希海視点ソング
+<li class="ref_title">Unicorn Kid - hydrate</li>
+読者が考えてくれた本作テーマソングその2
 <li class="ref_title">大貫妙子,坂本龍一 - 3びきのくま</li>
 作者が考えるリコの好きそうな曲。聴きながらしんみりしてそう。
 <li class="ref_title">Squarepusher - Dark Steering</li>
