リンクにフォルメア公式アカウントを追加

--- a/link.html
+++ b/link.html
@@ -86,13 +86,16 @@
     </tbody>
   </table>
 
-  <div class="link_category">創作地図</div>
+  <div class="link_category">架空世界・創作地図</div>
   <table class="link">
     <tbody>
       <tr>
+      　　<td class="nobanner"><a href="https://twitter.com/formey_embassy" target="_blank"><span class="pbanner"><span style="font-size:78%;">ルシャーナ@フォルメア公式アカウント</span></span></a></td>
         <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
         <td class="nobanner"><a href="http://kitakami7kouren.jimdo.com/" target="_blank"><span class="pbanner">蒼い雪国</span></a></td>
-        <td class="nobanner"><a href="http://shiosakicity.jimdo.com/" target="_blank"><span class="pbanner">塩咲市</span></a></td>
+      </tr>
+      <tr>
+        <td class="nobanner"><a href="http://shiosakicity.jimdo.com/" target="_blank"><span class="pbanner">塩　咲　市</span></a></td>
       </tr>
     </tbody>
   </table>
