リファレンスに声優を追加

--- a/hardproblem/references.html
+++ b/hardproblem/references.html
@@ -96,6 +96,8 @@
 読者が考えてくれたリコの声優その2
 <li class="ref_title">内田彩</li>
 読者が考えてくれた希海の声優
+<li class="ref_title">佐藤利奈</li>
+読者が考えてくれた希海の声優その2
 <li class="ref_title">小山力也</li>
 読者が考えてくれた東の声優
 
