--- a/link.html
+++ b/link.html
@@ -64,7 +64,7 @@
         <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
       </tr>
       <tr>
-　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
+　　　　　　　<td class="banner"><a href="http://alohtas.web.fc2.com/" target="_blank"><img src="banner/banner.png"></a></td>
  　　　　　　<td class="nobanner"><a href="http://asuka-46.lolipotouch.jp/" target="_blank"><span class="pbanner">Drawing of Asuka</span></a></td>
         <td class="nobanner"><a href="http://www.pixiv.net/novel/member.php?id=2444663" target="_blank"><span class="pbanner">hakoniwa(PYU)</span></a></td>
       </tr>
