時間帯を昼に変更

--- a/hardproblem/5-05.html
+++ b/hardproblem/5-05.html
@@ -14,11 +14,11 @@
 
   <div class="contents">
 <div class="text">
-　当日は朝七時に家を出た。
-　想定していたのよりもずいぶんと早い。すっかり早起きが板についてしまったのもそうだが、リコとふたりで部屋にいると息が詰まりそうだったからだ。
-　朝食だってとってない。そもそもリコが炊事をできるような状態ではなかったし、一切の言葉がないままに無言で箸を動かす自分の姿を想像すると食べずに出て正解だったと希海は思う。
+　その日は昼過ぎに目が覚めた。
+　想定していたのよりもずいぶんと遅い。日々の学校通いで疲れていたせいだ。昨日は実験を終えてヘトヘトになって帰ってきて、次に起きた時にはもう日はすっかり登り切ってしまっていた。
+　ようやく起きたんですか、と言わんばかりの恨めしそうなリコの視線に急かされ、希海は朝食も昼食も取らずに急いで準備をする。急いでいたのもあるが、どこか心ここにあらずといったリコと面と向かって無言で箸を動かす自分の姿を想像すると食べずに出て正解だったと希海は思う。
 『まもなく六号線に快速<ruby>飾磨<rp>《</rp><rt>しかま</rt><rp>》</rp></ruby>行きが到着します』
-　そしてふたりは今、郊鉄の<ruby>御園<rp>《</rp><rt>みその</rt><rp>》</rp></ruby>駅で西行きの電車を待っている。すでにラッシュ時のピークを過ぎたとはいえ、平日の鉄道駅には沢山の人が行き交っていた。スーツを着たサラリーマンや気だるそうな様子で電車を待つ大学生、必死に単語帳とにらめっこする予備校生の姿もある。だがそんな往来の多さにも関わらず、言葉を交わす人間はごくわずかだ。誰もがプラットホームに響く足音に身を委ね、ただ無言で電車を待ち続ける一般的な平日朝の光景。そんなどこか異様でもある静けさをかき消すかのように、列車がレールのジョイント音を鳴らせて入線してくる。
+　そしてふたりは今、郊鉄の<ruby>御園<rp>《</rp><rt>みその</rt><rp>》</rp></ruby>駅で西行きの電車を待っている。昼間の閑散とした時間帯とはいえ、郊外のハブ駅には沢山の人が行き交っていた。スーツを着たサラリーマンや気だるそうな様子で電車を待つ大学生、必死に単語帳とにらめっこする予備校生の姿もある。だがそんな往来の多さにも関わらず、言葉を交わす人間はごくわずかだ。誰もがプラットホームに響く足音に身を委ね、ただ無言で電車を待ち続ける一般的な平日の光景。そんなどこか異様でもある静けさをかき消すかのように、列車がレールのジョイント音を鳴らせて入線してくる。
 　車輪が嫌な軋みを響かせる中、希海はちらりと横に立った少女の様子を窺ってみる。くりっとした双眸が焦点を結ぶ場所はどこか遠い。
 　電車が止まり扉が開いた。
 　車内へ足を踏み入れるとそこにはむわっとした油臭い空気が立ち込めている。生暖かい人間の匂い。大嫌いな匂いだった。
@@ -45,7 +45,7 @@
 　電車が駅に停まっていたのもタイミングが悪かった。その盛大な音は確実にリコの耳にも届いただろう。まさか朝食を抜いたことがこんな形で裏目に出るとは予想もしていなかった希海は、扉が閉まってからもしばらくコートを脱ごうとした姿勢のままで固まってしまう。
 「ふふっ……」
 　そんな止まってしまった希海の時間を再び動かしたのは、リコの小さな笑い声だった。
-「ごめんなさい。そういえば朝ご飯作ってませんでした。お腹空きましたよね。向こうに着いたら何か買いましょう」
+「ごめんなさい。そういえば飯作ってませんでした。お腹空きましたよね。向こうに着いたら何か買いましょう」
 　そう言って柔らかく微笑むリコ。数日ぶり、いや数週間ぶりに見る笑顔だった。
 「あ……ああ私はいいからさ。それよりリコの……その『やらなきゃいけないこと』を先にしようよ」
 　やらなきゃいけないこと。その言葉がリコの表情を曇らせる。
