脱字の修正

--- a/hardproblem/5-05.html
+++ b/hardproblem/5-05.html
@@ -45,7 +45,7 @@
 　電車が駅に停まっていたのもタイミングが悪かった。その盛大な音は確実にリコの耳にも届いただろう。まさか朝食を抜いたことがこんな形で裏目に出るとは予想もしていなかった希海は、扉が閉まってからもしばらくコートを脱ごうとした姿勢のままで固まってしまう。
 「ふふっ……」
 　そんな止まってしまった希海の時間を再び動かしたのは、リコの小さな笑い声だった。
-「ごめんなさい。そういえば飯作ってませんでした。お腹空きましたよね。向こうに着いたら何か買いましょう」
+「ごめんなさい。そういえばお昼ご飯作ってませんでした。お腹空きましたよね。向こうに着いたら何か買いましょう」
 　そう言って柔らかく微笑むリコ。数日ぶり、いや数週間ぶりに見る笑顔だった。
 「あ……ああ私はいいからさ。それよりリコの……その『やらなきゃいけないこと』を先にしようよ」
 　やらなきゃいけないこと。その言葉がリコの表情を曇らせる。
