文フリブース番号を表記

--- a/event.html
+++ b/event.html
@@ -37,7 +37,7 @@
 
       <tr>
         <td rowspan="2" class="eventdate">2015/09/20</td>
-    　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span></td>
+    　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span>　C-22</td>
       </tr>
       <tr>
       	<td class="eventcaption">『ふたりのハードプロブレム』文庫版とその合同誌を販売予定</td></tr>
