--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </table>
 
   <div class="information" style="display:;">
-    <div style="font-weight:bold;"><a href="http://bunfree.net/?osaka_bun03" target="_blank">第三回大阪文フリ</a>への参加が決まりました。</div>
+    <div style="font-weight:bold;"><a href="http://bunfree.net/?osaka_bun03" target="_blank">第三回大阪文フリ</a>に参加します(C-22)</div>
     『<a href="hardproblem/">ふたりのハードプロブレム</a>』書籍版とその合同誌を販売します。<br>
     書籍版は絵を<a href="http://www.pixiv.net/member.php?id=10662" target="_blank">れーちぇさん</a>に描いていただくことになりました！<br>
     お楽しみに。
