ヘタレ絵追加

--- a/picture.html
+++ b/picture.html
@@ -21,6 +21,7 @@
     <caption>らくがき（2015～）</caption>
     <tbody>
       <tr>
+        <td><a href="picture/norika11.html"><img src="thumbnail/tn_norika11.jpg"></a></td>
         <td><a href="picture/norika10.html"><img src="thumbnail/tn_norika10.jpg"></a></td>
         <td><a href="picture/janedoe03.html"><img src="thumbnail/tn_janedoe03.jpg"></a></td>
         <td><a href="picture/fujishiro01.html"><img src="thumbnail/tn_fujishiro01.jpg"></a></td>
@@ -28,9 +29,9 @@
         <td><a href="picture/norika09.html"><img src="thumbnail/tn_norika09.jpg"></a></td>
         <td><a href="picture/collabo18.html"><img src="thumbnail/tn_collabo18.jpg"></a></td>
         <td><a href="picture/collabo17.html"><img src="thumbnail/tn_collabo17.jpg"></a></td>
-        <td><a href="picture/nozomi21.html"><img src="thumbnail/tn_nozomi21.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/nozomi21.html"><img src="thumbnail/tn_nozomi21.jpg"></a></td>
         <td><a href="picture/nozomi20.html"><img src="thumbnail/tn_nozomi20.jpg"></a></td>
         <td><a href="picture/fia01.html"><img src="thumbnail/tn_fia01.jpg"></a></td>
         <td><a href="picture/riko16.html"><img src="thumbnail/tn_riko16.jpg"></a></td>
@@ -38,9 +39,9 @@
         <td><a href="picture/mayura01.html"><img src="thumbnail/tn_mayura01.jpg"></a></td>
         <td><a href="picture/nozomi18.html"><img src="thumbnail/tn_nozomi18.jpg"></a></td>
         <td><a href="picture/norika08.html"><img src="thumbnail/tn_norika08.jpg"></a></td>
-        <td><a href="picture/nozomi17.html"><img src="thumbnail/tn_nozomi17.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/nozomi17.html"><img src="thumbnail/tn_nozomi17.jpg"></a></td>
         <td><a href="picture/riko15.html"><img src="thumbnail/tn_riko15.jpg"></a></td>
         <td><a href="picture/riko14.html"><img src="thumbnail/tn_riko14.jpg"></a></td>
         <td><a href="picture/nozomi16.html"><img src="thumbnail/tn_nozomi16.jpg"></a></td>
@@ -48,9 +49,9 @@
         <td><a href="picture/norika07.html"><img src="thumbnail/tn_norika07.jpg"></a></td>
         <td><a href="picture/riko13.html"><img src="thumbnail/tn_riko13.jpg"></a></td>
         <td><a href="picture/metastable01.html"><img src="thumbnail/tn_metastable01.jpg"></a></td>
-        <td><a href="picture/nozomi15.html"><img src="thumbnail/tn_nozomi15.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/nozomi15.html"><img src="thumbnail/tn_nozomi15.jpg"></a></td>
         <td><a href="picture/norika06.html"><img src="thumbnail/tn_norika06.jpg"></a></td>
         <td><a href="picture/riko12.html"><img src="thumbnail/tn_riko12.jpg"></a></td>
         <td><a href="picture/nozomi14.html"><img src="thumbnail/tn_nozomi14.jpg"></a></td>
@@ -58,9 +59,9 @@
         <td><a href="picture/norika05.html"><img src="thumbnail/tn_norika05.jpg"></a></td>
         <td><a href="picture/nozomi13.html"><img src="thumbnail/tn_nozomi13.jpg"></a></td>
         <td><a href="picture/hardproblem03.html"><img src="thumbnail/tn_hardproblem03.jpg"></a></td>
-        <td><a href="picture/hardproblem02.html"><img src="thumbnail/tn_hardproblem02.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/hardproblem02.html"><img src="thumbnail/tn_hardproblem02.jpg"></a></td>
         <td><a href="picture/collabo15.html"><img src="thumbnail/tn_collabo15.jpg"></a></td>
         <td><a href="picture/collabo14.html"><img src="thumbnail/tn_collabo14.jpg"></a></td>
         <td><a href="picture/nozomi12.html"><img src="thumbnail/tn_nozomi12.jpg"></a></td>
