--- a/link.html
+++ b/link.html
@@ -85,7 +85,7 @@
     </tbody>
   </table>
 
-  <div class="link_category">架空世界・創作地図</div>
+  <div class="link_category">架空世界・創作地図・人工言語</div>
   <table class="link">
     <tbody>
       <tr>
@@ -95,6 +95,7 @@
       </tr>
       <tr>
         <td class="nobanner"><a href="http://shiosakicity.jimdo.com/" target="_blank"><span class="pbanner">塩　咲　市</span></a></td>
+        <td class="nobanner"><a href="http://yuhr.lv9.org/qr/" target="_blank"><span class="pbanner">qreriqa</span></a></td>
       </tr>
     </tbody>
   </table>
