--- a/link.html
+++ b/link.html
@@ -95,7 +95,7 @@
       </tr>
       <tr>
         <td class="nobanner"><a href="http://shiosakicity.jimdo.com/" target="_blank"><span class="pbanner">塩　咲　市</span></a></td>
-        <td class="nobanner"><a href="http://yuhr.lv9.org/qr/" target="_blank"><span class="pbanner">qreriqa</span></a></td>
+        <td class="banner"><a href="http://yuhr.lv9.org/qr/" target="_blank"><img src="banner/CLW8z9PUYAApaKD.png"></a></td>
       </tr>
     </tbody>
   </table>
