カタログを追加

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
   <div class="information" style="display:;">
     <div style="font-weight:bold;"><a href="http://bunfree.net/?osaka_bun03" target="_blank">第三回大阪文フリ</a>に参加します(C-22)</div>
     『<a href="hardproblem/">ふたりのハードプロブレム</a>』書籍版とその合同誌を販売します。<br>
-    絵は<a href="http://www.pixiv.net/member.php?id=10662" target="_blank">れーちぇさん</a>に描いていただくことになりました！お楽しみに。
+    絵は<a href="http://www.pixiv.net/member.php?id=10662" target="_blank">れーちぇさん</a>に描いていただくことになりました！お楽しみに。<br>
+    カタログは<a href="https://c.bunfree.net/c/osaka03/!/C/22" target="_blank">コチラ</a>。
   </div>
   
 </body>
