--- a/event.html
+++ b/event.html
@@ -23,35 +23,35 @@
 
       <tr>
         <td rowspan="2" class="eventdate">2015/11/23</td>
-    　　　　<td class="eventtitle"><span class="event">第二十一回文学フリマ東京</span></td>
+    　　　　<td class="eventtitle"><span class="event">第二十一回文学フリマ東京</span>　???／<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a></td>
       </tr>
       <tr>
       	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol2.html" target="_blank">暗黒定数式 Vol.2</a>』に「ふたりのハードプロブレム」§4～6を寄稿予定</td></tr>
 
       <tr>
         <td rowspan="2" class="eventdate">2015/10/25</td>
-    　　　　<td class="eventtitle"><span class="event">第一回文学フリマ福岡</span></td>
+    　　　　<td class="eventtitle"><span class="event">第一回文学フリマ福岡</span>　あ-29・30／真揺中心</td>
       </tr>
       <tr>
       	<td class="eventcaption">『ふたりのハードプロブレム』文庫版を販売予定</td></tr>
 
       <tr>
         <td rowspan="2" class="eventdate">2015/09/20</td>
-    　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span>　C-22</td>
+    　　　　<td class="eventtitle"><span class="event"><a href="https://c.bunfree.net/c/osaka03" target="_blank">第三回文学フリマ大阪</a></span>　C-22／真揺中心</td>
       </tr>
       <tr>
       	<td class="eventcaption">『ふたりのハードプロブレム』文庫版とその合同誌を販売予定</td></tr>
 
       <tr>
         <td rowspan="2" class="eventdate">2014/12/29</td>
-    　　　　<td class="eventtitle"><span class="event">コミックマーケット87</span>（2日目）　東ソ-08a　RedTailCat</td>
+    　　　　<td class="eventtitle"><span class="event">コミックマーケット87</span>（2日目）　東ソ-08a／RedTailCat</td>
       </tr>
       <tr>
       	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』委託販売</td></tr>
 
       <tr>
         <td rowspan="2" class="eventdate">2014/11/24</td>
-    　　　　<td class="eventtitle"><span class="event">第十九回文学フリマ東京</span>　Fホール(2F) イ-67　<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a></td>
+    　　　　<td class="eventtitle"><span class="event">第十九回文学フリマ東京</span>　Fホール(2F) イ-67／<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a></td>
       </tr>
       <tr>
       	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』に「ふたりのハードプロブレム」§1～3を寄稿</td></tr>
